fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-099-a2f954e973.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="50px" mixBlendMode="saturation" w="100px" />"
