fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-100-a546e9e784.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="50px" mixBlendMode="color" w="100px" />"
