fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-101-394e6d9bf6.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="50px" mixBlendMode="luminosity" w="100px" />"
