fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-103-246809daea.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="50px" mixBlendMode="multiply" opacity="0.75" w="100px" />"
