fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-104-d68998542b.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box bg="#F00" bgBlendMode="multiply" h="50px" w="100px" />"
