fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-106-6d687083cc.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Text
  color="#F00"
  fontFamily="Arial"
  fontSize="16px"
  fontWeight="400"
  letterSpacing="0px"
  lineHeight="1.5px"
  w="100px"
>
  Height
</Text>"
