fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-108-c6c4dabf49.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Text
  color="#F00"
  fontFamily="Arial"
  fontSize="16px"
  fontWeight="400"
  h="50px"
  letterSpacing="0px"
  lineHeight="1.5px"
  w="100px"
>
  Truncate
</Text>"
