fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-109-e2824ad5be.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Text
  boxSize="100%"
  color="#F00"
  fontSize="16px"
  lineHeight="1.5px"
  typography="typographyHeading"
>
  Heading
</Text>"
