fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-110-f2505cce4b.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box bg="linear-gradient(90deg, #F00 0%, #00F 100%)" h="50px" w="100px" />"
